test/null-check/violations/BranchBad2.out
[31mSafety Violation[00m: Use of potentially null pointer in store at BranchBad2.cc:11
clang++-17: error: clang frontend command failed with exit code 2 (use -v to see invocation)
